# word-of-wisdom-pow

./: Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  word-of-wisdom.txt
src/: challenge.rs  client.rs  lib.rs  server.rs  server_error.rs
