[package]
name = "word-of-wisdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
futures = "0.3.28"
rand = "0.8.5"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["full"]}
tokio-util = { version = "0.7.8", features = ["codec"]}

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
